--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,26 +1,34 @@
-<h1>Student Form</h1>
-<%= form_for :student, url: students_path do |f| %>
-  <p>
-    <%= f.label :Name %><br>
-    <%= f.text_field :name %>
-  </p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <% stylesheet_link_tag "New_style.css" %>
+  </head>
+  <body>
+    <h1>Student Form</h1>
+    <%= form_for :student, url: students_path do |f| %>
+      <p id="name">
+        <%= f.label :Name %><br>
+        <%= f.text_field :name, :id => "nam" %>
+      </p>
 
-  <p>
-    <%= f.label :DOB %><br>
-    <%= f.text_field :dob %>
-  </p>
+      <p id="dob">
+        <%= f.label :DOB %><br>
+        <%= f.text_field :dob, :id => "birthdate" %>
+      </p>
 
-  <p>
-    <%= f.label :City %><br>
-    <%= f.text_field :city %>
-  </p>
+      <p id="city">
+        <%= f.label :City %><br>
+        <%= f.text_field :city, :id => "cityfield" %>
+      </p>
 
-  <p>
-    <%= f.label :Reg_no %><br>
-    <%= f.text_field :regno %>
-  </p>
+      <p id="regno">
+        <%= f.label :Reg_no %><br>
+        <%= f.text_field :regno, :id => "reg" %>
+      </p>
 
-  <p>
-    <%= f.submit :Submit %>
-  </p>
-<% end %>
+      <p>
+        <%= f.submit :Submit, :id => "submit" %> <%= link_to "logout", :controller=> "welcome", :action=> "index", :id => "log" %>
+      </p>
+    <% end %>
+  </body>
+</html>
